--- a/Instagram Clone/Resources/en.lproj/Localizable.strings
+++ b/Instagram Clone/Resources/en.lproj/Localizable.strings
@@ -26,3 +26,17 @@
 "username_placeholder" = "Username";
 "email_placeholder" = "Email";
 "register_btn_title"= "Sign up";
+
+// Mark: - ProfileScreen
+"setting_vc_title" = "Options";
+
+// Mark: - SettingsScreen
+
+"logout_title" = "Log Out";
+
+"section_setting_title" = "Settings";
+"section_help_title" = "Support";
+"logout_alert_msg" = "Are you sure you want to log out ?";
+"no_msg" = "Cancel";
+
+
