--- a/Instagram Clone/Resources/en.lproj/Localizable.strings
+++ b/Instagram Clone/Resources/en.lproj/Localizable.strings
@@ -39,4 +39,9 @@
 "logout_alert_msg" = "Are you sure you want to log out ?";
 "no_msg" = "Cancel";
 
+// Mark: - NotificationScreen
+
+"notification_ui_title" = "Notifications";
+
+
 
