--- a/Instagram Clone/Resources/fr.lproj/Localizable.strings
+++ b/Instagram Clone/Resources/fr.lproj/Localizable.strings
@@ -60,6 +60,23 @@
 "action_sheet_action1" = "Prendre une photo";
 "action_sheet_action2" = "Sélectionner dans la bibliothèque";
 "action_sheet_action3" = "Annuler";
+"name_lbl"= "Nom";
+"username_lbl" = "Nom d'utilisateur";
+"bio_lbl" = "Biographie";
+"website_lbl"= "Site Web";
+"email_lbl" = "Adresse Email";
+"phone_lbl" = "Telephone";
+"gender_lbl" = "Sexe";
+
+"name_placeholder"= "Votre Nom...";
+"username_placeholder" = "Nom d'utilisateur...";
+"bio_placeholder" = "Biographie...";
+"website_placeholder"= "www.votresite.fr";
+"email_placeholder" = "Adresse Email...";
+"phone_placeholder" = "Numero de telephone...";
+"gender_placeholder" = "Sexe...";
+
+
 
 
 
