finishing custom userfollow cell & refactoring

--- a/Instagram Clone/Resources/fr.lproj/Localizable.strings
+++ b/Instagram Clone/Resources/fr.lproj/Localizable.strings
@@ -88,6 +88,11 @@
 "btn_edit_title" = "Modifier Profile";
 
 
+// Mark: - UserFollowCell
+"follow_title" = "S'abonner";
+"unfollow_title" = "Se desabonner";
+
+
 
 
 
