--- a/Instagram Clone/Resources/en.lproj/Localizable.strings
+++ b/Instagram Clone/Resources/en.lproj/Localizable.strings
@@ -93,6 +93,10 @@
 "btn_edit_title" = "Edit Profile";
 
 
+// Mark: - UserFollowCell
+"follow_title" = "Follow";
+"unfollow_title" = "Unfollow";
+
 
 
 
