implementing header and main post custom cell UI

--- a/Instagram Clone/Resources/en.lproj/Localizable.strings
+++ b/Instagram Clone/Resources/en.lproj/Localizable.strings
@@ -99,6 +99,12 @@
 "follow_title" = "Follow";
 "unfollow_title" = "Unfollow";
 
+// Mark: - HomeFeed controller
+"more_action_sheet_title" = "Options";
+"more_action_sheet_action1" = "Report Post";
+"more_action_sheet_action2" = "Cancel";
+
+
 
 
 
